--- a/school_reg/users/templates/users/register.html
+++ b/school_reg/users/templates/users/register.html
@@ -2,11 +2,13 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <fieldset class="form-group">
                 <label class="border-bottom mb-4">Join Today</label>
                 {{ form|crispy }}
+                {{ form_p|crispy }}
+                {{ form_s|crispy }}
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Sign Up</button>
