--- a/school_reg/register/templates/register/base.html
+++ b/school_reg/register/templates/register/base.html
@@ -21,6 +21,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
+                <a class="nav-item nav-link" href="{% url 'teacher-panel-view' %}">Panel Nauczyciela</a>
+                <a class="nav-item nav-link" href="#">Panel Ucznia</a>
+                <a class="nav-item nav-link" href="#">Panel Rodzica</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
