--- a/school_reg/register/templates/register/teacher_view.html
+++ b/school_reg/register/templates/register/teacher_view.html
@@ -9,7 +9,7 @@
                 <div class="d-flex justify-content-center flex-wrap">
                     <a class="btn btn-lg btn-info btn-main m-2" href="#" role="button">Klasa wychowawstwo</a>
                     <a class="btn btn-lg btn-info btn-main m-2" href="{% url 'teacher-subjects-view' %}" role="button">Klasy zajecia</a>
-                    <a class="btn btn-lg btn-info btn-main m-2" href="#" role="button">b</a>
+                    <a class="btn btn-lg btn-info btn-main m-2" href="#" role="button">Plan zajęć</a>
                     <a class="btn btn-lg btn-info btn-main m-2" href="#" role="button">c</a>
                 </div>
             </p>
