--- a/school_reg/register/templates/register/teacher_view.html
+++ b/school_reg/register/templates/register/teacher_view.html
@@ -3,11 +3,13 @@
 {% load register.extras %}
 {% block content %}
     <div class="jumbotron bg-steel-2 text-center">
-        <h3 class="display-4">Co chcesz zrobic</h3>
+        <h4 class="display-4">Panel nauczyciela</h4>
         <hr class="my-4">
             <p class="lead">
                 <div class="d-flex justify-content-center flex-wrap">
-                    <a class="btn btn-lg btn-info btn-main m-2" href="#" role="button">Klasa wychowawstwo</a>
+                    {% if educator %}
+                        <a class="btn btn-lg btn-info btn-main m-2" href="{% url 'class-details' educator.id %}" role="button">Klasa wychowawstwo</a>
+                    {% endif %}
                     <a class="btn btn-lg btn-info btn-main m-2" href="{% url 'teacher-subjects-view' %}" role="button">Klasy zajecia</a>
                     <a class="btn btn-lg btn-info btn-main m-2" href="#" role="button">Plan zajęć</a>
                     <a class="btn btn-lg btn-info btn-main m-2" href="#" role="button">c</a>
