--- a/school_reg/register/templates/register/base.html
+++ b/school_reg/register/templates/register/base.html
@@ -21,9 +21,13 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
+                {% if user.profile.role == 2 %}
                 <a class="nav-item nav-link" href="{% url 'teacher-panel-view' %}">Panel Nauczyciela</a>
-                <a class="nav-item nav-link" href="#">Panel Ucznia</a>
+                {% elif user.profile.role == 0 %}
+                <a class="nav-item nav-link" href="{% url 'student-panel-view' %}">Panel Ucznia</a>
+                {% elif user.profile.role == 1 %}
                 <a class="nav-item nav-link" href="#">Panel Rodzica</a>
+                {% endif %}
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
