Schedules done, made models - adverts and notice

--- a/school_reg/register/templates/register/base.html
+++ b/school_reg/register/templates/register/base.html
@@ -28,6 +28,7 @@
                 {% elif user.profile.role == 1 %}
                 <a class="nav-item nav-link" href="#">Panel Rodzica</a>
                 {% endif %}
+                <a class="nav-item nav-link" href="{% url 'schedules' %}">Plany zajec</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
