--- a/school_reg/register/templates/register/student_details.html
+++ b/school_reg/register/templates/register/student_details.html
@@ -11,6 +11,7 @@
                     <h4>Wychowawca: {{ student.classes.educator }}</h4>
                 </div>
             </div>
+        <a href="{% url 'add-notice' student.id %}">add-notice</a>
             <article class="media content-section">
               <div class="media-body">
 
