--- a/school_reg/register/templates/register/base.html
+++ b/school_reg/register/templates/register/base.html
@@ -23,6 +23,7 @@
             <div class="navbar-nav mr-auto">
                 {% if user.profile.role == 2 %}
                 <a class="nav-item nav-link" href="{% url 'teacher-panel-view' %}">Panel Nauczyciela</a>
+                <a class="nav-item nav-link" href="{% url 'add-advert' %}">Dodaj ogloszenie</a>
                 {% elif user.profile.role == 0 %}
                 <a class="nav-item nav-link" href="{% url 'student-panel-view' %}">Panel Ucznia</a>
                 {% elif user.profile.role == 1 %}
