--- a/school_reg/register/templates/register/notices_teacher.html
+++ b/school_reg/register/templates/register/notices_teacher.html
@@ -7,7 +7,7 @@
         <article class="media content-section">
           <div class="media-body">
             <div class="article-metadata">
-                <p class="mr-2">{{ notice.from_user.user.first_name }} {{ notice.from_user.user.last_name }}</p>
+                <p class="mr-2">{{ notice.to_user.user.first_name }} {{ notice.to_user.user.last_name }}</p>
             </div>
                 <p class="article-content">{{ notice.text }}</p>
               {% if notice.accepted %}
