--- a/school_reg/register/templates/register/teacher_view.html
+++ b/school_reg/register/templates/register/teacher_view.html
@@ -13,6 +13,7 @@
                     <a class="btn btn-lg btn-info btn-main m-2" href="{% url 'teacher-subjects-view' %}" role="button">Klasy zajecia</a>
                     <a class="btn btn-lg btn-info btn-main m-2" href="{% url 'teacher-schedule' teacher.id %}" role="button">Plan zajęć</a>
                     <a class="btn btn-lg btn-info btn-main m-2" href="{% url 'notices-teacher' %}" role="button">Uwagi</a>
+                    <a class="btn btn-lg btn-info btn-main m-2" href="{% url 'adverts-teacher' %}" role="button">Dodane ogloszenia</a>
                 </div>
             </p>
     </div>
