--- a/school_reg/register/templates/register/notice_parent.html
+++ b/school_reg/register/templates/register/notice_parent.html
@@ -7,7 +7,12 @@
         <article class="media content-section">
           <div class="media-body">
             <div class="article-metadata">
-                <p class="mr-2">{{ notice.from_user.user.first_name }} {{ notice.from_user.user.last_name }}</p>
+                <p class="mr-2">{{ notice.from_user.user.first_name }} {{ notice.from_user.user.last_name }}
+                    {% if notice.accepted != None %}
+                    <a href="{% url 'notice-edit-parent' notice.id %}" class="float-right">Modyfikuj</a>
+                    {% endif %}
+                </p>
+                <small class="text-muted">{{ notice.date|date:"F d, Y" }} </small>
             </div>
                 <p class="article-content">{{ notice.text }}</p>
               {% if notice.accepted %}
@@ -15,7 +20,7 @@
                   <p>Zaakceptowano:</p>
                 <p class="article-content">{{ notice.re_text }}</p>
               {% endif %}
-{#              <small class="text-muted">{{ advert.date|date:"F d, Y" }} </small>#}
+
           </div><br>
             </article>
             {% if not notice.accepted %}
