--- a/school_reg/register/templates/register/notices_teacher.html
+++ b/school_reg/register/templates/register/notices_teacher.html
@@ -4,20 +4,24 @@
     <h3>Uwagi dla {{ student.user.first_name }} {{ student.user.last_name }}</h3>
     {% if notices %}
         {% for notice in notices %}
-        <article class="media content-section">
-          <div class="media-body">
-            <div class="article-metadata">
-                <p class="mr-2">{{ notice.to_user.user.first_name }} {{ notice.to_user.user.last_name }}</p>
-                <small class="text-muted">{{ notice.date|date:"F d, Y" }} </small>
-            </div>
-                <p class="article-content">{{ notice.text }}</p>
-              {% if notice.accepted %}
-                  <br>
-                  <p>Zaakceptowano:</p>
-                <p class="article-content">{{ notice.re_text }}</p>
-              {% endif %}
-          </div><br>
-            </article>
+            {% if not notice.deleted %}
+                <article class="media content-section">
+                  <div class="media-body">
+                    <div class="article-metadata">
+                        <p class="mr-2">{{ notice.to_user.user.first_name }} {{ notice.to_user.user.last_name }}
+                        <a href="{% url 'edit-notice' notice.id %}" class="float-right">Modyfikuj</a>
+                        </p>
+                        <small class="text-muted">{{ notice.date|date:"F d, Y" }} </small>
+                    </div>
+                        <p class="article-content">{{ notice.text }}</p>
+                      {% if notice.accepted %}
+                          <br>
+                          <p>Zaakceptowano:</p>
+                        <p class="article-content">{{ notice.re_text }}</p>
+                      {% endif %}
+                  </div><br>
+                </article>
+            {% endif %}
         {% endfor %}
     {% else %}
         <article class="media content-section">
