--- a/school_reg/register/templates/register/base.html
+++ b/school_reg/register/templates/register/base.html
@@ -23,17 +23,20 @@
             <div class="navbar-nav mr-auto">
                 {% if user.profile.role == 2 %}
                 <a class="nav-item nav-link" href="{% url 'teacher-panel-view' %}">Panel Nauczyciela</a>
-                <a class="nav-item nav-link" href="{% url 'add-advert' %}">Dodaj ogloszenie</a>
                 {% elif user.profile.role == 0 %}
                 <a class="nav-item nav-link" href="{% url 'student-panel-view' %}">Panel Ucznia</a>
                 {% elif user.profile.role == 1 %}
                 <a class="nav-item nav-link" href="{% url 'parent-panel-view' %}">Panel Rodzica</a>
                 {% endif %}
                 <a class="nav-item nav-link" href="{% url 'schedules' %}">Plany zajec</a>
+                {% if user.profile.role == 2 %}
+                    <a class="nav-item nav-link" href="{% url 'add-advert' %}">Dodaj ogloszenie</a>
+                {% endif %}
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
                 {% if user.is_authenticated %}
+                    <a class="nav-item nav-link" href="{% url 'announcements' %}">Powiadomienia</a>
                     <a class="nav-item nav-link" href="{% url 'profile' %}">Konto ({{ user.username }})</a>
                     <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                 {% else %}
